# the_gathering_beta

./: .env.example  .gitignore  CLAUDE.md  README.md  dev_setup.py  docker-compose.yml  local_versions.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  reset_db.py  sonar-project.properties  testing_setup.py
.github/workflows/: ci.yml
app/core/: ai_prompts.py  arq_db_manager.py  arq_pool.py  auth_dependencies.py  auth_utils.py  background_tasks.py  config.py  constants.py  csrf_dependencies.py  database.py  exceptions.py  jwt_utils.py  redis_client.py  validators.py
app/dependencies/: ai_service_dependencies.py  provider_dependencies.py
app/implementations/: __init__.py  deepl_translator.py
app/interfaces/: __init__.py  ai_provider.py  embedding_service.py  keyword_extractor.py  memory_retriever.py  memory_summarizer.py  translator.py
app/models/: __init__.py  ai_cooldown.py  ai_entity.py  ai_memory.py  conversation.py  conversation_participant.py  message.py  message_translation.py  room.py  user.py
app/providers/: openai_provider.py
app/repositories/: ai_cooldown_repository.py  ai_entity_repository.py  ai_memory_repository.py  base_repository.py  conversation_repository.py  message_repository.py  message_translation_repository.py  repository_dependencies.py  room_repository.py  user_repository.py
app/schemas/: ai_schemas.py  auth_schemas.py  chat_schemas.py  memory_schemas.py  room_schemas.py  room_user_schemas.py
app/services/: ai_context_service.py  ai_entity_service.py  ai_facade.py  ai_response_service.py  avatar_service.py  background_service.py  conversation_service.py  embedding_factory.py  heuristic_summarizer.py  keyword_extractor_factory.py  keyword_retriever.py  long_term_memory_service.py  memory_builder_service.py  openai_embedding_service.py  personality_memory_service.py  room_service.py  service_dependencies.py  short_term_memory_service.py  stopwords_de.py  text_chunking_service.py  translation_service.py  vector_memory_retriever.py  yake_extractor.py
app/workers/: tasks.py  worker_settings.py
docs/: async_migration_roadmap.md  collaboration_guide.json  github_setup_guide.md  project_context.json  sqlalchemy_fixture_refactor_roadmap.md
docs/logs_46560262334/: 1_test.txt
docs/logs_46561824577/: 1_test.txt
tests/: async_conftest.py  conftest.py  pytest.ini
tests/deprecated/: __init__.py  conftest_e2e_old.py  old_test_async_api_endpoints.py  (+5 more)
(+96 files in other folders)
