[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-gathering"
version = "1.0.0"
description = "FastAPI-based chat application with real-time messaging"
authors = [{name = "The Gathering Team"}]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Allow specific imports in test files that appear unused (pytest fixtures)
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F401",  # Unused imports (pytest fixtures often appear unused)
    "F811",  # Redefined name (pytest fixture parameters)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests with mocked dependencies",
    "e2e: End-to-end integration tests",
    "slow: Marks tests as slow",
]
asyncio_mode = "auto"